# AI-Judicial-Assistant-Crew

./: README.md  app.py  pyproject.toml  requirements.txt
agents/: case_intake_agent.py  constitutional_query_agent.py  legal_precedent_agent.py  synthesis_agent.py
